--- a/index.html
+++ b/index.html
@@ -29,9 +29,21 @@ button { padding: 5px 10px; font-size: 16px; margin-right:5px; }
     font-weight: bold;
     display: none;
 }
+/* NO-FLY ZONE */
+#topZone {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 150px; /* Adjust height as needed */
+    background-color: rgba(255,0,0,0); /* Invisible but still detects cursor */
+    pointer-events: none;
+    z-index: 9999;
+}
 </style>
 </head>
 <body>
+<div id="topZone"></div>
 <div id="ui">
     <div>
         Username: <input type="text" id="usernameInput" placeholder="Enter username">
@@ -122,7 +134,16 @@ loginBtn.addEventListener('click', () => {
 });
 
 /* --- MOUSE TRACKING --- */
-document.addEventListener('mousemove', e => { mouseX = e.clientX; mouseY = e.clientY; });
+document.addEventListener('mousemove', e => {
+    mouseX = e.clientX;
+    mouseY = e.clientY;
+
+    // No-fly zone check
+    const topZoneHeight = 150;
+    if(mouseY < topZoneHeight){
+        resetGame();
+    }
+});
 document.addEventListener('mouseleave', () => { resetGame(); });
 
 /* --- HIT SOUND --- */
@@ -200,7 +221,6 @@ function updateLeaderboard(){
         const board = sorted.map(([name,val])=>`${name}: ${val.score}`).join('<br>');
         document.getElementById('leaderboard').innerHTML = '<strong>Leaderboard:</strong><br>' + board;
 
-        // Rank
         if(currentUser){
             db.ref('leaderboard').orderByChild('score').once('value', snap=>{
                 const allData = snap.val();
@@ -211,14 +231,10 @@ function updateLeaderboard(){
             });
         }
     });
-    // World record
     db.ref('worldRecord').once('value', snapshot => { worldRecord = snapshot.val() || 0; });
 }
 
-// Refresh leaderboard every 5 seconds
 setInterval(updateLeaderboard,5000);
-
-/* --- RESIZE CANVAS --- */
 window.addEventListener('resize', () => { canvas.width = window.innerWidth; canvas.height = window.innerHeight; });
 </script>
 </body>
