--- a/index.html
+++ b/index.html
@@ -28,22 +28,26 @@ button { padding: 5px 10px; font-size: 16px; margin-right:5px; }
     color: yellow;
     font-weight: bold;
     display: none;
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 24px;
+    background-color: rgba(0,0,0,0.7);
+    padding: 10px 20px;
+    border-radius: 10px;
 }
-/* NO-FLY ZONE */
 #topZone {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 150px; /* Adjust height as needed */
-    background-color: rgba(255,0,0,0); /* Invisible but still detects cursor */
-    pointer-events: none;
-    z-index: 9999;
+    height: 150px; /* big box height */
+    z-index: 999;
 }
 </style>
 </head>
 <body>
-<div id="topZone"></div>
 <div id="ui">
     <div>
         Username: <input type="text" id="usernameInput" placeholder="Enter username">
@@ -58,6 +62,7 @@ button { padding: 5px 10px; font-size: 16px; margin-right:5px; }
     <div id="leaderboard"><strong>Leaderboard:</strong><br>Loading...</div>
     <div id="worldRecordNotif">🌟 New World Record! 🌟</div>
 </div>
+<div id="topZone"></div> <!-- Top zone to prevent cheating -->
 <canvas id="gameCanvas"></canvas>
 
 <!-- Firebase compat scripts -->
@@ -138,13 +143,16 @@ document.addEventListener('mousemove', e => {
     mouseX = e.clientX;
     mouseY = e.clientY;
 
-    // No-fly zone check
-    const topZoneHeight = 150;
-    if(mouseY < topZoneHeight){
-        resetGame();
+    // Reset if cursor enters top zone
+    if(mouseY < 150) resetGame();
+
+    // Instant world record check
+    if(Math.floor(score) > worldRecord){
+        worldRecord = Math.floor(score);
+        db.ref('worldRecord').set(worldRecord);
+        showWorldRecordNotif();
     }
 });
-document.addEventListener('mouseleave', () => { resetGame(); });
 
 /* --- HIT SOUND --- */
 const hitSound = new Audio('hit_sound.mp3'); // Replace with your sound
@@ -201,15 +209,16 @@ function resetGame() {
         db.ref('users/' + currentUser).update({ highScore });
         db.ref('leaderboard/' + currentUser).set({ score: highScore });
     }
-    if(Math.floor(score) > worldRecord){
-        worldRecord = Math.floor(score);
-        db.ref('worldRecord').set(worldRecord);
-        document.getElementById('worldRecordNotif').style.display='block';
-        setTimeout(()=>{document.getElementById('worldRecordNotif').style.display='none'},3000);
-    }
     score = 0;
     obstacles = [];
     updateLeaderboard();
+}
+
+/* --- WORLD RECORD NOTIFICATION --- */
+function showWorldRecordNotif() {
+    const notif = document.getElementById('worldRecordNotif');
+    notif.style.display = 'block';
+    setTimeout(() => { notif.style.display = 'none'; }, 3000);
 }
 
 /* --- LEADERBOARD --- */
@@ -221,6 +230,7 @@ function updateLeaderboard(){
         const board = sorted.map(([name,val])=>`${name}: ${val.score}`).join('<br>');
         document.getElementById('leaderboard').innerHTML = '<strong>Leaderboard:</strong><br>' + board;
 
+        // Rank
         if(currentUser){
             db.ref('leaderboard').orderByChild('score').once('value', snap=>{
                 const allData = snap.val();
@@ -231,10 +241,14 @@ function updateLeaderboard(){
             });
         }
     });
+    // World record
     db.ref('worldRecord').once('value', snapshot => { worldRecord = snapshot.val() || 0; });
 }
 
+// Refresh leaderboard every 5 seconds
 setInterval(updateLeaderboard,5000);
+
+/* --- RESIZE CANVAS --- */
 window.addEventListener('resize', () => { canvas.width = window.innerWidth; canvas.height = window.innerHeight; });
 </script>
 </body>
