--- a/index.html
+++ b/index.html
@@ -13,13 +13,23 @@ body {
     font-family: Arial, sans-serif;
 }
 #gameCanvas { display: block; background-color: #333; }
+#topBlock {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    background-color: #111;
+    z-index: 1000;
+}
 #ui {
     position: absolute;
-    top: 10px;
+    top: 90px; /* moved below top block */
     left: 10px;
     color: white;
+    z-index: 1001;
 }
-#score, #highScore, #usernameInput, #leaderboard, #rank, #worldRecordNotif {
+#score, #highScore, #usernameInput, #passwordInput, #leaderboard, #rank, #worldRecordNotif {
     margin: 5px 0;
 }
 input { padding: 5px; font-size: 16px; margin-right:5px;}
@@ -28,26 +38,12 @@ button { padding: 5px 10px; font-size: 16px; margin-right:5px; }
     color: yellow;
     font-weight: bold;
     display: none;
-    position: absolute;
-    top: 50px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 24px;
-    background-color: rgba(0,0,0,0.7);
-    padding: 10px 20px;
-    border-radius: 10px;
-}
-#topZone {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 150px; /* big box height */
-    z-index: 999;
 }
 </style>
 </head>
 <body>
+<div id="topBlock"></div> <!-- Blocks cheating at the top -->
+
 <div id="ui">
     <div>
         Username: <input type="text" id="usernameInput" placeholder="Enter username">
@@ -62,7 +58,7 @@ button { padding: 5px 10px; font-size: 16px; margin-right:5px; }
     <div id="leaderboard"><strong>Leaderboard:</strong><br>Loading...</div>
     <div id="worldRecordNotif">🌟 New World Record! 🌟</div>
 </div>
-<div id="topZone"></div> <!-- Top zone to prevent cheating -->
+
 <canvas id="gameCanvas"></canvas>
 
 <!-- Firebase compat scripts -->
@@ -139,20 +135,8 @@ loginBtn.addEventListener('click', () => {
 });
 
 /* --- MOUSE TRACKING --- */
-document.addEventListener('mousemove', e => {
-    mouseX = e.clientX;
-    mouseY = e.clientY;
-
-    // Reset if cursor enters top zone
-    if(mouseY < 150) resetGame();
-
-    // Instant world record check
-    if(Math.floor(score) > worldRecord){
-        worldRecord = Math.floor(score);
-        db.ref('worldRecord').set(worldRecord);
-        showWorldRecordNotif();
-    }
-});
+document.addEventListener('mousemove', e => { mouseX = e.clientX; mouseY = e.clientY; });
+document.addEventListener('mouseleave', () => { resetGame(); });
 
 /* --- HIT SOUND --- */
 const hitSound = new Audio('hit_sound.mp3'); // Replace with your sound
@@ -164,16 +148,16 @@ class Obstacle {
         this.x = Math.random() * canvas.width;
         this.y = -20;
         this.size = 20 + Math.random()*40;
-        this.speed = 2 + Math.random()*4;
+        this.speed = 3 + Math.random()*5; // faster obstacles
         this.color = type===1?'red':type===2?'yellow':'blue';
         this.angle = 0;
-        this.zigSpeed = 0.05 + Math.random()*0.05;
+        this.zigSpeed = 0.1 + Math.random()*0.1; // faster zig
         this.bounce = type===3 ? true : false;
         this.direction = 1;
     }
     update() {
         if(this.type===1) this.y += this.speed;
-        if(this.type===2) { this.y += this.speed; this.x += Math.sin(this.angle)*50*0.02; this.angle += this.zigSpeed; }
+        if(this.type===2) { this.y += this.speed; this.x += Math.sin(this.angle)*50*0.03; this.angle += this.zigSpeed; }
         if(this.bounce) { this.y += this.speed; this.x += this.direction * this.speed; if(this.x < 0 || this.x > canvas.width) this.direction *= -1; }
 
         const dx = mouseX - this.x;
@@ -193,9 +177,9 @@ class Obstacle {
 /* --- GAME LOOP --- */
 function gameLoop() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
-    if(Math.random() < 0.03) obstacles.push(new Obstacle(Math.floor(Math.random()*3)+1));
+    if(Math.random() < 0.06) obstacles.push(new Obstacle(Math.floor(Math.random()*3)+1)); // spawn faster
     obstacles.forEach(ob => { ob.update(); ob.draw(); });
-    score += 0.1;
+    score += 0.15; // score increases faster
     document.getElementById('score').innerText = 'Score: ' + Math.floor(score);
     requestAnimationFrame(gameLoop);
 }
@@ -209,16 +193,15 @@ function resetGame() {
         db.ref('users/' + currentUser).update({ highScore });
         db.ref('leaderboard/' + currentUser).set({ score: highScore });
     }
+    if(Math.floor(score) > worldRecord){
+        worldRecord = Math.floor(score);
+        db.ref('worldRecord').set(worldRecord);
+        document.getElementById('worldRecordNotif').style.display='block';
+        setTimeout(()=>{document.getElementById('worldRecordNotif').style.display='none'},3000);
+    }
     score = 0;
     obstacles = [];
     updateLeaderboard();
-}
-
-/* --- WORLD RECORD NOTIFICATION --- */
-function showWorldRecordNotif() {
-    const notif = document.getElementById('worldRecordNotif');
-    notif.style.display = 'block';
-    setTimeout(() => { notif.style.display = 'none'; }, 3000);
 }
 
 /* --- LEADERBOARD --- */
