--- a/index.html
+++ b/index.html
@@ -13,23 +13,14 @@ body {
     font-family: Arial, sans-serif;
 }
 #gameCanvas { display: block; background-color: #333; }
-#topBlock {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 80px;
-    background-color: #111;
-    z-index: 1000;
-}
 #ui {
     position: absolute;
-    top: 90px; /* moved below top block */
+    top: 10px;
     left: 10px;
     color: white;
     z-index: 1001;
 }
-#score, #highScore, #usernameInput, #passwordInput, #leaderboard, #rank, #worldRecordNotif {
+#score, #highScore, #usernameInput, #leaderboard, #rank, #worldRecordNotif {
     margin: 5px 0;
 }
 input { padding: 5px; font-size: 16px; margin-right:5px;}
@@ -42,8 +33,6 @@ button { padding: 5px 10px; font-size: 16px; margin-right:5px; }
 </style>
 </head>
 <body>
-<div id="topBlock"></div> <!-- Blocks cheating at the top -->
-
 <div id="ui">
     <div>
         Username: <input type="text" id="usernameInput" placeholder="Enter username">
@@ -58,7 +47,6 @@ button { padding: 5px 10px; font-size: 16px; margin-right:5px; }
     <div id="leaderboard"><strong>Leaderboard:</strong><br>Loading...</div>
     <div id="worldRecordNotif">🌟 New World Record! 🌟</div>
 </div>
-
 <canvas id="gameCanvas"></canvas>
 
 <!-- Firebase compat scripts -->
@@ -136,7 +124,11 @@ loginBtn.addEventListener('click', () => {
 
 /* --- MOUSE TRACKING --- */
 document.addEventListener('mousemove', e => { mouseX = e.clientX; mouseY = e.clientY; });
-document.addEventListener('mouseleave', () => { resetGame(); });
+
+/* --- MOUSE LEAVE REDIRECT --- */
+document.addEventListener('mouseleave', () => {
+    window.location.href = 'https://www.google.com';
+});
 
 /* --- HIT SOUND --- */
 const hitSound = new Audio('hit_sound.mp3'); // Replace with your sound
@@ -148,16 +140,16 @@ class Obstacle {
         this.x = Math.random() * canvas.width;
         this.y = -20;
         this.size = 20 + Math.random()*40;
-        this.speed = 3 + Math.random()*5; // faster obstacles
+        this.speed = 3 + Math.random()*5; // harder: faster
         this.color = type===1?'red':type===2?'yellow':'blue';
         this.angle = 0;
-        this.zigSpeed = 0.1 + Math.random()*0.1; // faster zig
+        this.zigSpeed = 0.07 + Math.random()*0.08; // harder zig
         this.bounce = type===3 ? true : false;
         this.direction = 1;
     }
     update() {
         if(this.type===1) this.y += this.speed;
-        if(this.type===2) { this.y += this.speed; this.x += Math.sin(this.angle)*50*0.03; this.angle += this.zigSpeed; }
+        if(this.type===2) { this.y += this.speed; this.x += Math.sin(this.angle)*60*0.02; this.angle += this.zigSpeed; }
         if(this.bounce) { this.y += this.speed; this.x += this.direction * this.speed; if(this.x < 0 || this.x > canvas.width) this.direction *= -1; }
 
         const dx = mouseX - this.x;
@@ -177,9 +169,9 @@ class Obstacle {
 /* --- GAME LOOP --- */
 function gameLoop() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
-    if(Math.random() < 0.06) obstacles.push(new Obstacle(Math.floor(Math.random()*3)+1)); // spawn faster
+    if(Math.random() < 0.05) obstacles.push(new Obstacle(Math.floor(Math.random()*3)+1)); // harder: more obstacles
     obstacles.forEach(ob => { ob.update(); ob.draw(); });
-    score += 0.15; // score increases faster
+    score += 0.15; // faster scoring
     document.getElementById('score').innerText = 'Score: ' + Math.floor(score);
     requestAnimationFrame(gameLoop);
 }
@@ -192,12 +184,16 @@ function resetGame() {
         document.getElementById('highScore').innerText = 'High Score: ' + highScore;
         db.ref('users/' + currentUser).update({ highScore });
         db.ref('leaderboard/' + currentUser).set({ score: highScore });
-    }
-    if(Math.floor(score) > worldRecord){
-        worldRecord = Math.floor(score);
-        db.ref('worldRecord').set(worldRecord);
-        document.getElementById('worldRecordNotif').style.display='block';
-        setTimeout(()=>{document.getElementById('worldRecordNotif').style.display='none'},3000);
+        // Instant world record notification
+        db.ref('worldRecord').get().then(snap=>{
+            const wr = snap.val() || 0;
+            if(highScore > wr){
+                worldRecord = highScore;
+                db.ref('worldRecord').set(worldRecord);
+                document.getElementById('worldRecordNotif').style.display='block';
+                setTimeout(()=>{document.getElementById('worldRecordNotif').style.display='none'},3000);
+            }
+        });
     }
     score = 0;
     obstacles = [];
@@ -213,7 +209,6 @@ function updateLeaderboard(){
         const board = sorted.map(([name,val])=>`${name}: ${val.score}`).join('<br>');
         document.getElementById('leaderboard').innerHTML = '<strong>Leaderboard:</strong><br>' + board;
 
-        // Rank
         if(currentUser){
             db.ref('leaderboard').orderByChild('score').once('value', snap=>{
                 const allData = snap.val();
@@ -224,7 +219,6 @@ function updateLeaderboard(){
             });
         }
     });
-    // World record
     db.ref('worldRecord').once('value', snapshot => { worldRecord = snapshot.val() || 0; });
 }
 
