--- a/index.html
+++ b/index.html
@@ -12,18 +12,14 @@ body {
     background-color: #222;
     font-family: Arial, sans-serif;
 }
-#gameCanvas {
-    display: block;
-    background-color: #333;
-}
+#gameCanvas { display: block; background-color: #333; }
 #ui {
     position: absolute;
     top: 10px;
     left: 10px;
     color: white;
-    z-index: 1001;
 }
-#score, #highScore, #usernameInput, #leaderboard, #rank, #worldRecordNotif {
+#score, #highScore, #usernameInput, #passwordInput, #registerBtn, #loginBtn, #userStatus, #leaderboard, #rank, #worldRecordNotif {
     margin: 5px 0;
 }
 input { padding: 5px; font-size: 16px; margin-right:5px; }
@@ -52,6 +48,7 @@ button { padding: 5px 10px; font-size: 16px; margin-right:5px; }
 </div>
 <canvas id="gameCanvas"></canvas>
 
+<!-- Firebase compat scripts -->
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
 
@@ -69,6 +66,7 @@ const firebaseConfig = {
 firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 
+/* --- GAME VARIABLES --- */
 const canvas = document.getElementById('gameCanvas');
 const ctx = canvas.getContext('2d');
 canvas.width = window.innerWidth;
@@ -77,20 +75,21 @@ canvas.height = window.innerHeight;
 let score = 0;
 let highScore = 0;
 let obstacles = [];
-let mouseX = 0;
-let mouseY = 0;
+let mouseX = canvas.width/2;
+let mouseY = canvas.height/2;
 let currentUser = null;
 let worldRecord = 0;
 
 document.getElementById('highScore').innerText = 'High Score: ' + highScore;
 
+/* --- AUTH ELEMENTS --- */
 const usernameInput = document.getElementById('usernameInput');
 const passwordInput = document.getElementById('passwordInput');
 const registerBtn = document.getElementById('registerBtn');
 const loginBtn = document.getElementById('loginBtn');
 const userStatus = document.getElementById('userStatus');
 
-// Register
+/* --- REGISTER --- */
 registerBtn.addEventListener('click', () => {
     const username = usernameInput.value.trim();
     const password = passwordInput.value;
@@ -107,7 +106,7 @@ registerBtn.addEventListener('click', () => {
     });
 });
 
-// Login
+/* --- LOGIN --- */
 loginBtn.addEventListener('click', () => {
     const username = usernameInput.value.trim();
     const password = passwordInput.value;
@@ -122,30 +121,36 @@ loginBtn.addEventListener('click', () => {
     });
 });
 
-// Mouse tracking
+/* --- MOUSE TRACKING --- */
 document.addEventListener('mousemove', e => { mouseX = e.clientX; mouseY = e.clientY; });
-// Redirect on leave
-document.addEventListener('mouseleave', () => { window.location.href = 'https://www.google.com'; });
 
-const hitSound = new Audio('hit_sound.mp3');
+// Reset mouse to center if it leaves the page
+document.addEventListener('mouseleave', () => {
+    mouseX = canvas.width / 2;
+    mouseY = canvas.height / 2;
+});
 
+/* --- HIT SOUND --- */
+const hitSound = new Audio('hit_sound.mp3'); // Replace with your sound
+
+/* --- OBSTACLE CLASS --- */
 class Obstacle {
     constructor(type) {
         this.type = type;
         this.x = Math.random() * canvas.width;
         this.y = -20;
         this.size = 20 + Math.random()*40;
-        this.speed = 3 + Math.random()*5;
+        this.speed = 2 + Math.random()*4;
         this.color = type===1?'red':type===2?'yellow':'blue';
         this.angle = 0;
-        this.zigSpeed = 0.07 + Math.random()*0.08;
-        this.bounce = type===3;
+        this.zigSpeed = 0.05 + Math.random()*0.05;
+        this.bounce = type===3 ? true : false;
         this.direction = 1;
     }
     update() {
-        if(this.type===1) this.y += this.speed;
-        if(this.type===2) { this.y += this.speed; this.x += Math.sin(this.angle)*60*0.02; this.angle += this.zigSpeed; }
-        if(this.bounce) { this.y += this.speed; this.x += this.direction * this.speed; if(this.x < 0 || this.x > canvas.width) this.direction *= -1; }
+        if(this.type===1) this.y += this.speed*1.5; // harder game
+        if(this.type===2) { this.y += this.speed*1.3; this.x += Math.sin(this.angle)*50*0.03; this.angle += this.zigSpeed; }
+        if(this.bounce) { this.y += this.speed*1.2; this.x += this.direction * this.speed; if(this.x < 0 || this.x > canvas.width) this.direction *= -1; }
 
         const dx = mouseX - this.x;
         const dy = mouseY - this.y;
@@ -161,37 +166,39 @@ class Obstacle {
     }
 }
 
+/* --- GAME LOOP --- */
 function gameLoop() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
-    if(Math.random() < 0.05) obstacles.push(new Obstacle(Math.floor(Math.random()*3)+1));
+    if(Math.random() < 0.05) obstacles.push(new Obstacle(Math.floor(Math.random()*3)+1)); // spawn more obstacles
     obstacles.forEach(ob => { ob.update(); ob.draw(); });
-    score += 0.15;
+    score += 0.15; // score increases faster
     document.getElementById('score').innerText = 'Score: ' + Math.floor(score);
     requestAnimationFrame(gameLoop);
 }
 gameLoop();
 
+/* --- RESET FUNCTION --- */
 function resetGame() {
     if(currentUser && score > highScore){
         highScore = Math.floor(score);
         document.getElementById('highScore').innerText = 'High Score: ' + highScore;
         db.ref('users/' + currentUser).update({ highScore });
         db.ref('leaderboard/' + currentUser).set({ score: highScore });
-        db.ref('worldRecord').get().then(snap=>{
-            const wr = snap.val() || 0;
-            if(highScore > wr){
-                worldRecord = highScore;
-                db.ref('worldRecord').set(worldRecord);
-                document.getElementById('worldRecordNotif').style.display='block';
-                setTimeout(()=>{document.getElementById('worldRecordNotif').style.display='none'},3000);
-            }
-        });
+    }
+    if(Math.floor(score) > worldRecord){
+        worldRecord = Math.floor(score);
+        db.ref('worldRecord').set(worldRecord);
+        // instant notification
+        const notif = document.getElementById('worldRecordNotif');
+        notif.style.display='block';
+        setTimeout(()=>{notif.style.display='none'},3000);
     }
     score = 0;
     obstacles = [];
     updateLeaderboard();
 }
 
+/* --- LEADERBOARD --- */
 function updateLeaderboard(){
     db.ref('leaderboard').orderByChild('score').limitToLast(5).once('value', snapshot=>{
         const data = snapshot.val();
@@ -199,6 +206,7 @@ function updateLeaderboard(){
         const sorted = Object.entries(data).sort((a,b)=>b[1].score - a[1].score);
         const board = sorted.map(([name,val])=>`${name}: ${val.score}`).join('<br>');
         document.getElementById('leaderboard').innerHTML = '<strong>Leaderboard:</strong><br>' + board;
+
         if(currentUser){
             db.ref('leaderboard').orderByChild('score').once('value', snap=>{
                 const allData = snap.val();
@@ -212,7 +220,10 @@ function updateLeaderboard(){
     db.ref('worldRecord').once('value', snapshot => { worldRecord = snapshot.val() || 0; });
 }
 
+// Refresh leaderboard every 5 seconds
 setInterval(updateLeaderboard,5000);
+
+/* --- RESIZE CANVAS --- */
 window.addEventListener('resize', () => { canvas.width = window.innerWidth; canvas.height = window.innerHeight; });
 </script>
 </body>
